--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: nanajanashia/argocd-app:1.2
+        image: jamilusman/nginx:stable-alpine3.20-perl
         resources:
           limits:
             memory: "512Mi"
